--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,11 @@
+
+@import "./config.scss";
+@import "./elementui.scss";
 body{
-   // background-color: red;
+   width: 100%;
+   height:100%;
+   padding: 0;
+   margin: 0;
 }
+ .pull-left{float:left;}
+ .pull-right{float:right;}
